# agent3dify

./: .env.sample  .gitignore  README.md  pyproject.toml
src/agent3dify/: __init__.py  __main__.py  agent_factory.py  app.py  cli.py  config.py  execution_guard.py  image_compare.py  image_editor.py  progress.py  prompts.py  tools.py  workspace.py
src/agent3dify/resources/: __init__.py
src/agent3dify/resources/skills/analyzer/: SKILL.md
src/agent3dify/resources/skills/builder/: SKILL.md
src/agent3dify/resources/skills/modeler/: SKILL.md
src/agent3dify/resources/skills/planner/: SKILL.md
src/agent3dify/resources/skills/verifier/: SKILL.md
src/agent3dify/resources/templates/: model_template.py
